Se corrige el titulo en el index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Parraquia inmaculada">
     <meta name="author" content="Plinio Mosquera, David Reyes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PARROQUIA INMACULADA</title>
+    <title>Parroquia Inmaculada Inmaculada</title>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalice.css">
     <link rel="stylesheet" href="libs/wow/animate.css">
