Cambio de por 3cera vez el titulo de la web

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Parraquia inmaculada">
     <meta name="author" content="Plinio Mosquera, David Reyes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parroquia Inmaculada Inmaculada</title>
+    <title>Parroquia Inmaculada</title>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalice.css">
     <link rel="stylesheet" href="libs/wow/animate.css">
@@ -50,7 +50,7 @@
             <div class="container">
                 <div class="fila">
                     <div class="columna columna-50 columna-mb-100">
-                        <h1 class="wow slideInLeft" data-wow-duration="2s">Parroquia INMACULADA</h1>
+                        <h1 class="wow slideInLeft" data-wow-duration="2s">Parroquia Inmaculada</h1>
                         <p class="wow slideInLeft" data-wow-duration="2s">Tenemos todo lo relacionado con misas, baultismos, segregacion</p>
                         <a href="#lacarta" class="btn boton-transparente wow slideInLeft" data-wow-duration="2s">
                             <!--<span>Ver Carta</span>-->
